--- a/Tutorial4Classwork/src/Tutorial4Classwork.Application/Tutorial4Classwork.Application.csproj
+++ b/Tutorial4Classwork/src/Tutorial4Classwork.Application/Tutorial4Classwork.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Tutorial4Classwork.Models\Tutorial4Classwork.Models.csproj" />
+      <ProjectReference Include="..\..\src\Tutorial4Classwork.Models\Tutorial4Classwork.Models.csproj" />
     </ItemGroup>
 
 </Project>
